--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <name>algorithms</name>
-    <url>https://github.com/ZdybelA/Algorithms.git</url>
+    <url>https://github.com/KrzysztofKmiecik/Algorithms.git</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
