--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,14 @@
         </dependency>
 
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.8</version>
+                <scope>provided</scope>
+            </dependency>
+
+
     </dependencies>
 
     <build>
